--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chunder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,4 +14,5 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
+
 }
